--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: "3.9"
 
-service:
+services:
   app:
     build:
       context: .
+      args:
+        - DEV=true
     ports:
      - "8000:8000"
     volumes:
